--- a/templates/Home/index.html
+++ b/templates/Home/index.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
-  <a class="navbar-brand" id="Titulo" href="{% url 'usuarios:index' %}"><img src="{% static 'assets/img/logo5.png' %}" width="150" height="50" class="d-inline-block align-top" alt=""></a>
+  <a class="navbar-brand" id="Titulo" href="{% url 'usuarios:index' %}"><img src="{% static 'assets/img/logo5.png' %}" width="140" height="50" class="d-inline-block align-top" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
   </button>
@@ -35,7 +35,7 @@
 			<hr class="my-4">
 			<p class="d-none d-lg-block">Se detectan las fortalezas y debilidades, además se ofrece un plan de mejoramiento para el fortalecimiento de las falencias encontradas.</p>
 			<p class="lead">
-				<a class=" btn btn-primary btn-lg" href="{% url 'user:registro'%}" role="button">Registrar</a>
+				<a class=" btn btn-primary btn-lg" href="{% url 'user:registro'%}" role="button">Registrarme</a>
 			</p>
 		</div>
 	</div>
