--- a/templates/Administrador/registro_admin.html
+++ b/templates/Administrador/registro_admin.html
@@ -18,24 +18,7 @@
 {% endblock css %}
 
 {% block content %}
-<nav class="navbar border navbar-expand-lg fixed-top navbar-light bg-white">
-    <a class="navbar-brand" id="Titulo" href="{% url 'user:index' %}"><i class="material-icons">cloud</i>  APOLO</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-    </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-	<ul class=" navbar-nav ml-auto">
-	  <li class="nav-item active">
-		<a class="nav-link" href="#section1">¿Qué somos? <span class="sr-only">(current)</span></a>
-	  </li>
-	  <li class="nav-item">
-		<a class="nav-link" href="{% url 'user:login'%}">Entrar</a>
-	  </li>
-	</ul>
-  </div>
-</nav>
-
-
+<br>
 <div id="section1" class="container-fluid" >
     {% if Mensaje != '' %}
         <div class="row">
@@ -53,7 +36,12 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-default panel-border-color panel-border-color-primary">
-                    <div class="panel-heading text-center"><img src="{% static 'assets/img/logo2.png' %}" alt="Apolo" width="102" height="140" class="logo-img"><span class="splash-description">Registro de usuario</span></div>
+                    <div class="panel-heading text-center">
+                        <a href="{% url 'user:index'%}">
+                            <img src="{% static 'assets/img/logo2.png' %}" href="{% url 'user:login'%}" alt="Apolo" width="102" height="140" class="logo-img" >
+                        </a>
+                        <h2> Registro de administrador </h2>                    
+                    </div>
                     <div class="panel-body">
                 <form method="post" style="border-radius: 0px;" class="form-horizontal group-border-dashed needs-validation" novalidate="">
                     {% csrf_token %}
@@ -124,9 +112,15 @@
                 {{form.last_login}} 
 
                 <div class="text-center">
-                        <button type="submit" class="btn btn-primary" name="button">Registro</button> 
+                        <button type="submit" class="btn btn-primary btn-xl" name="button" style="width: 200px">Registro</button> 
                 </div>
                 </form>
+                <br>
+                <div class="text-center">
+                    <a href="{% url 'user:login' %}">
+                        <button class="btn btn-primary btn-xl" name="button" style="width: 200px">Entrar</button>
+                    </a> 
+                </div>
             </div>
             </div>
         </div>
