--- a/templates/Administrador/verPlan.html
+++ b/templates/Administrador/verPlan.html
@@ -32,13 +32,21 @@
                   </li>                 
                 </ul>
               </li>
+              <li class="parent"><a href="#"><i class="icon mdi mdi-chart"></i><span>Áreas</span></a>
+                <ul class="sub-menu">
+                  <li><a href="{% url 'admon:verArea' %}">Ver áreas</a>
+                  </li>
+                  <li><a href="{% url 'admon:inicio' sign=1 %}">Crear Area</a>
+                  </li>                 
+                </ul>
+              </li>
               <li class="parent active"><a href="#"><i class="icon mdi mdi-assignment-o"></i><span>Plan de mejoramiento</span></a>
                 <ul class="sub-menu">
-                        <li><a href="{% url 'admon:verPlan' %}">Ver planes</a>
-                        </li>
-                        <li><a href="{% url 'admon:crearPlan' %}">Crear planes</a>
-                        </li>                 
-                      </ul>
+                  <li><a href="{% url 'admon:verPlan' %}">Ver planes</a>
+                  </li>
+                  <li><a href="{% url 'admon:crearPlan' %}">Crear planes</a>
+                  </li>                 
+                </ul>
               </li>                
             </ul>
           </div>
