--- a/templates/Home/registro.html
+++ b/templates/Home/registro.html
@@ -98,13 +98,13 @@
                         {{form.last_login}} 
 
                         <div class="text-center">
-                                <button type="submit" class="btn btn-primary btn-xl" name="button">Registro</button> 
+                                <button type="submit" class="btn btn-primary btn-xl" name="button" style="width: 200px">Registro</button> 
                         </div>
                         </form>
                 <br>
                 <div class="text-center">
                     <a href="{% url 'user:login' %}">
-                            <button class="btn btn-primary btn-xl" name="button">Entrar</button>
+                            <button class="btn btn-primary btn-xl" name="button" style="width: 200px">Entrar</button>
                     </a> 
                 </div>
             </div>
