--- a/templates/Administrador/index.html
+++ b/templates/Administrador/index.html
@@ -29,15 +29,23 @@
                 <ul class="sub-menu">
                   <li><a href="{% url 'admon:verEva' %}">Ver evaluaciones</a>
                   </li>
-                  <li><a href="{% url 'admon:inicio' sign=2 %}">Crear evaluaciones</a>
+                  <li><a href="{% url 'admon:inicio' %}">Crear evaluaciones</a>
                   </li>                 
                 </ul>
               </li>
               <li class="parent"><a href="#"><i class="icon mdi mdi-chart"></i><span>Áreas</span></a>
                 <ul class="sub-menu">
-                  <li><a href="{% url 'admon:verArea' %}">Ver áreas</a>
+                  <li><a href="{% url 'evaluacion:vArea' %}">Ver áreas</a>
                   </li>
-                  <li><a href="{% url 'admon:inicio' sign=1 %}">Crear Area</a>
+                  <li><a href="{% url 'evaluacion:cArea' %}">Crear Area</a>
+                  </li>                 
+                </ul>
+              </li>
+              <li class="parent"><a href="#"><i class="icon mdi mdi-chart"></i><span>Indicadores</span></a>
+                <ul class="sub-menu">
+                  <li><a href="{% url 'evaluacion:vindi' %}">Ver indicadores</a>
+                  </li>
+                  <li><a href="{% url 'evaluacion:cindi' %}">Crear indicador</a>
                   </li>                 
                 </ul>
               </li>
@@ -61,41 +69,7 @@
 <div class="be-content">
     <div class="main-content container-fluid">
       <div class="row">
-        {% if Mensaje != '' %}
-          <div role="alert" class="alert alert-{{tipo}} alert-icon alert-dismissible">
-            <div class="icon"><span class="mdi mdi-{{icono}}"></span></div>
-            <div class="message">
-              <button type="button" data-dismiss="alert" aria-label="Close" class="close"><span aria-hidden="true" class="mdi mdi-close"></span></button><strong>
-              {% if icono == 'close-circle-o' %}
-                Algo salio mal!
-              {% else %}
-                Bien!
-              {% endif %}
-                </strong> {{Mensaje}}.
-            </div>
-          </div>
-      {% endif %}   
-        <!-- panel Creacion Areas -->
         
-        {% if  form_area != '' %}          
-          <div class="col-md-12">
-            <div class="panel panel-default" role="alert">
-              <div class="panel-heading panel-heading-divider">Creación Areas
-                <div class="tools"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span class="icon mdi mdi-close"></span></button></div><span class="panel-subtitle">Panel subtitle description</span>
-              </div>
-              <div class="panel-body">
-                <form  method="POST">
-                  {% csrf_token %}
-                  {{form_area.as_p}}
-                  <div class="text-center">
-                      <button type="submit" class="btn btn-success" name="button">Aceptar</button> 
-                  </div> 
-                </form>
-              </div>
-            </div>
-          </div>
-        {% endif %}
-
         <!-- panel Creacion Areas -->
 
 
