--- a/templates/Administrador/verArea.html
+++ b/templates/Administrador/verArea.html
@@ -34,9 +34,17 @@
             </li>
             <li class="parent active"><a href="#"><i class="icon mdi mdi-chart"></i><span>Áreas</span></a>
               <ul class="sub-menu">
-                <li><a href="{% url 'admon:verArea' %}">Ver áreas</a>
+                <li><a href="{% url 'evaluacion:vArea' %}">Ver áreas</a>
                 </li>
-                <li><a href="{% url 'admon:inicio' sign=1 %}">Crear Area</a>
+                <li><a href="{% url 'evaluacion:cArea' %}">Crear Area</a>
+                </li>                 
+              </ul>
+            </li>
+            <li class="parent"><a href="#"><i class="icon mdi mdi-chart"></i><span>Indicadores</span></a>
+              <ul class="sub-menu">
+                <li><a href="{% url 'evaluacion:vindi' %}">Ver indicadores</a>
+                </li>
+                <li><a href="{% url 'evaluacion:cindi' %}">Crear indicador</a>
                 </li>                 
               </ul>
             </li>
@@ -79,6 +87,7 @@
                           <tr>
                             <td>{{x.Nombre}}</td>
                             <td style="width:50%;">{{x.Descripcion}}</td>
+                            <td ><a href="{% url 'eva:mArea' clave=x.id %}">Editar</a></td>
                           </tr>
                         {% endfor %}
                         </tbody>
