--- a/templates/Administrador/verIndicador.html
+++ b/templates/Administrador/verIndicador.html
@@ -24,7 +24,7 @@
             <li class="divider">Menu</li>
             <li><a href="{% url 'usuarios:index' %}"><i class="icon mdi mdi-home"></i><span>Inicio</span></a>
             </li>
-            <li class="parent active"><a href="#"><i class="icon mdi mdi-chart"></i><span>Evaluaciones</span></a>
+            <li class="parent"><a href="#"><i class="icon mdi mdi-chart"></i><span>Evaluaciones</span></a>
               <ul class="sub-menu">
                 <li><a href="{% url 'admon:verEva' %}">Ver evaluaciones</a>
                 </li>
@@ -40,7 +40,7 @@
                 </li>                 
               </ul>
             </li>
-            <li class="parent"><a href="#"><i class="icon mdi mdi-chart"></i><span>Indicadores</span></a>
+            <li class="parent active"><a href="#"><i class="icon mdi mdi-chart"></i><span>Indicadores</span></a>
               <ul class="sub-menu">
                 <li><a href="{% url 'evaluacion:vindi' %}">Ver indicadores</a>
                 </li>
@@ -68,7 +68,34 @@
 <div class="be-content">
     <div class="main-content container-fluid">
       <div class="row">
-       Ver evaluacion
+          <div class="col-md-12">
+              <div class="panel panel-default" role="alert">
+                <div class="panel-heading panel-heading-divider">Listado de Areas
+                  <div class="tools"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span class="icon mdi mdi-close"></span></button></div><span class="panel-subtitle">Panel subtitle description</span>
+                </div>
+                <div class="panel-body">
+                    <table class="table">
+                        <thead>
+                          <tr>
+                            <th >Nombre</th>
+                            <th style="width:50%;">Descripción</th>
+                            <th class="actions"></th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                        {% for x in indicadores %}
+                          <tr>
+                            <td>{{x.Nombre}}</td>
+                            <td >{{x.Areas.Nombre}}</td>
+                            <td ><a href="{% url 'eva:mindi' clave=x.id %}">Editar</a></td>
+                          </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                    
+                </div>
+              </div>
+            </div>
     </div>
   </div>
 </div>
