--- a/templates/Administrador/crearIndicador.html
+++ b/templates/Administrador/crearIndicador.html
@@ -26,34 +26,34 @@
             </li>
             <li class="parent"><a href="#"><i class="icon mdi mdi-chart"></i><span>Evaluaciones</span></a>
               <ul class="sub-menu">
-                <li><a href="{% url 'admon:verEva' %}">Ver evaluaciones</a>
+                <li><a href="{% url 'admon:crearEva' %}">Crear evaluación</a>
                 </li>
-                <li><a href="{% url 'admon:crearEva' %}">Crear evaluaciones</a>
-                </li>                 
+                <li><a href="{% url 'admon:verEva' %}">Ver evaluaciones</a>
+                </li>                                 
               </ul>
             </li>
             <li class="parent"><a href="#"><i class="icon mdi mdi-chart"></i><span>Áreas</span></a>
               <ul class="sub-menu">
+                <li><a href="{% url 'evaluacion:cArea' %}">Crear área</a>
+                </li> 
                 <li><a href="{% url 'evaluacion:vArea' %}">Ver áreas</a>
-                </li>
-                <li><a href="{% url 'evaluacion:cArea' %}">Crear Area</a>
-                </li>                 
+                </li>                                
               </ul>
             </li>
             <li class="parent active"><a href="#"><i class="icon mdi mdi-chart"></i><span>Indicadores</span></a>
               <ul class="sub-menu">
-                <li><a href="{% url 'evaluacion:vindi' %}">Ver indicadores</a>
-                </li>
                 <li><a href="{% url 'evaluacion:cindi' %}">Crear indicador</a>
-                </li>                 
+                </li>
+                <li><a href="{% url 'evaluacion:vindi' %}">Ver indicadores</a>
+                </li>                                 
               </ul>
             </li>
             <li class="parent"><a href="#"><i class="icon mdi mdi-assignment-o"></i><span>Plan de mejoramiento</span></a>
               <ul class="sub-menu">
-                  <li><a href="{% url 'admon:verPlan' %}">Ver planes</a>
-                  </li>
-                  <li><a href="{% url 'admon:crearPlan' %}">Crear planes</a>
-                  </li>                 
+                <li><a href="{% url 'admon:crearPlan' %}">Crear plan</a>
+                </li>  
+                <li><a href="{% url 'admon:verPlan' %}">Ver planes</a>
+                </li>                                   
               </ul>
             </li>                
           </ul>
@@ -94,7 +94,7 @@
         <div class="col-md-12">
           <div class="panel panel-default" role="alert">
             <div class="panel-heading panel-heading-divider">Creación de indicadores
-              <div class="tools"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span class="icon mdi mdi-close"></span></button></div><span class="panel-subtitle">Panel subtitle description</span>
+              <span class="panel-subtitle">Cree los indicadores que pertenecen a un área ya creada, luego añadalos.</span>
             </div>
             <div class="panel-body">
             
