--- a/templates/Administrador/registro_admin.html
+++ b/templates/Administrador/registro_admin.html
@@ -117,9 +117,7 @@
                 </form>
                 <br>
                 <div class="text-center">
-                    <a href="{% url 'user:login' %}">
-                        <button class="btn btn-primary btn-xl" name="button" style="width: 200px">Entrar</button>
-                    </a> 
+                    <span>¿Ya tiene una cuenta? <a href="{% url 'admon:login'%}">Entrar</a></span> 
                 </div>
             </div>
             </div>
