--- a/templates/Home/registro.html
+++ b/templates/Home/registro.html
@@ -102,10 +102,8 @@
                         </div>
                         </form>
                 <br>
-                <div class="text-center">
-                    <a href="{% url 'user:login' %}">
-                            <button class="btn btn-primary btn-xl" name="button" style="width: 200px">Entrar</button>
-                    </a> 
+                <div class="text-center">   
+                    <span>¿Ya tiene una cuenta? <a href="{% url 'user:login'%}">Entrar</a></span>
                 </div>
             </div>
             </div>
